--- a/CSS/index.css
+++ b/CSS/index.css
@@ -1,10 +1,37 @@
 
-.card{
+.menu{
     position: fixed;
 }
 .carousel-inner{
     height: 350px;
     padding: 20px;
+}
+.carousel-item{  
+    height: 350px;
+    padding: 20px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+   
+}
+.carousel-caption{
+    height: 300px 800px;
+    padding: 25px;
+}
+.panel-img img{
+    width: 150px;
+
+}
+
+.titulos{
+    color: #3c1b66;
+    font-weight: normal;
+    font-size: 35px;
+    font-family: Arial;
+    text-transform: uppercase;
+    text-align: center;
+    margin-top: 15px;
 }
 
 .cards-item-content{
@@ -40,7 +67,7 @@
 }
 .social{
     position: fixed;
-    left: 0%;
+    left: -32px;
     top: 200px;
     z-index: 2000;
 }
@@ -156,4 +183,24 @@ footer{
     opacity: .4;
     font-weight: 200;
 
+}
+.content{
+    width: 940px;
+    padding: 10px;
+    margin: auto;
+}
+     
+.parrafo{
+    text-align: justify;
+    border: solid 1px;
+    border-color: deepskyblue;
+    background-color: white;
+    padding: 10px;   
+}
+     
+body div p a{
+    text-decoration: none;
+    color: blueviolet;
+    margin: 0px;
+    padding: 0px;
 }
